--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ const BOTTOM_MARGIN = 0.1;
 const DEAD_ZONE = 100;      
 const GRAVITY = 0.39;
 const DOG_W = 32, DOG_H = 40;
+const V_SCALE = 0.8; // 0.8x Vertical scaling
 
 let mouse = { x: window.innerWidth/2, y: window.innerHeight/2 };
 let dog = { x: 200, y: 0, vx: 0, vy: 0, row: 1, col: 0, facing: 'right', sitLock: false, targetAction: null };
@@ -74,7 +75,8 @@ function initLeaves() {
             vrX: 0, vrY: 0,
             type: Math.random() > 0.5 ? 'fallLeaf' : 'springLeaf',
             frame: Math.floor(Math.random()*5),
-            size: 25 + Math.random() * 65,
+            // Lower bound for size increased
+            size: 40 + Math.random() * 50, 
             waft: Math.random() * 10,
             layer: Math.random(),
             skew: (Math.random() - 0.5) * 0.1,
@@ -110,8 +112,7 @@ function init() {
 
 function triggerSitExplosion(x, y, icon) {
     dog.sitLock = true;
-    dog.vx = 0; dog.vy = 0;
-    dog.x = x; dog.y = y;
+    dog.vx = 0; dog.vy = 0; dog.x = x; dog.y = y;
     if (icon) {
         setTimeout(() => { window.location.href = icon.path; }, 500);
         icon.revealed = true;
@@ -123,24 +124,25 @@ function triggerSitExplosion(x, y, icon) {
         let d = Math.hypot(l.x - x, l.y - y);
         if (d < sitRadius) {
             let angle = Math.atan2(l.y - y, l.x - x) + (Math.random() - 0.5);
-            l.vx = Math.cos(angle) * (1.5 + Math.random() * 1.5);
+            // Random horizontal displacement
+            l.vx = (Math.cos(angle) * (1.5 + Math.random() * 2)) + (Math.random() - 0.5);
             l.vy = Math.sin(angle) * 1.5;
-            // Reverted sit physics as requested
-            l.vz = (3.3 + Math.random() * 3) * 2.5; 
-            l.vrX = (Math.random() - 0.5) * 0.8; // Kept slight decrease on rotation
+            // 0.8x Scale on Sit
+            l.vz = (3.3 + Math.random() * 3) * 2.5 * V_SCALE; 
+            l.vrX = (Math.random() - 0.5) * 0.4; // Allow tiny bit of rotation
             l.layer = 1.0; 
         }
     });
 }
 
-// Steeper, less sensitive leash function
 function getSoftTargetY(mouseY, topLimit, botLimit) {
     if (mouseY >= topLimit && mouseY <= botLimit) return mouseY;
+    let factor = 0.15;
     if (mouseY < topLimit) {
-        let over = (topLimit - mouseY) * 0.15; // Increased steepness (only 15% influence)
+        let over = (topLimit - mouseY) * factor;
         return topLimit - (Math.atan(over / 50) * 15); 
     } else {
-        let over = (mouseY - botLimit) * 0.15;
+        let over = (mouseY - botLimit) * factor;
         return botLimit + (Math.atan(over / 50) * 15);
     }
 }
@@ -158,7 +160,6 @@ function loop(time) {
 
     let targetX = dog.targetAction ? dog.targetAction.x : mouse.x;
     let rawTargetY = dog.targetAction ? dog.targetAction.y : getSoftTargetY(mouse.y, topLimit, botLimit);
-    // Hard Clamp to ensure dog NEVER leaves the zone
     let targetY = Math.max(topLimit + 5, Math.min(botLimit - 5, rawTargetY));
     
     let dx = targetX - dog.x, dy = targetY - dog.y;
@@ -183,6 +184,7 @@ function loop(time) {
     dog.x += dog.vx * dt; dog.y += dog.vy * dt;
     let moving = Math.hypot(dog.vx, dog.vy) > 0.4;
     
+    // Rows: 1=StandSide, 3=SitSide, 6/7=Run
     if (dog.sitLock) {
         dog.row = 3; dog.col = (dog.facing === 'right') ? 0 : 2; 
         dog.col += Math.floor(Date.now()/300)%2;
@@ -208,10 +210,12 @@ function loop(time) {
             if (dDog < 50*p && moving && !dog.sitLock) {
                 if (l.layer > 0.7) { 
                     let pushAngle = Math.atan2(l.y - dog.y, l.x - dog.x);
-                    l.vx += Math.cos(pushAngle + (Math.random()-0.5)) * 1.5;
-                    l.vy += Math.sin(pushAngle + (Math.random()-0.5)) * 0.8;
-                    l.vz += 0.08 + (Math.hypot(dog.vx, dog.vy) * 0.04);
-                    l.vrX *= 0.8; 
+                    // Added bit of random horizontal displacement here too
+                    l.vx += (Math.cos(pushAngle) * 1.5) + (Math.random() - 0.5) * 0.5;
+                    l.vy += Math.sin(pushAngle) * 0.8;
+                    // 0.8x Vertical displacement on run
+                    l.vz += (0.08 + (Math.hypot(dog.vx, dog.vy) * 0.04)) * V_SCALE;
+                    l.vrX *= 0.85; // Allow tiny bit more rotation than before
                 }
                 if (Math.random() > 0.5) l.layer = Math.min(1.0, l.layer + 0.08); 
             }
@@ -220,7 +224,7 @@ function loop(time) {
                 l.rotX += l.vrX * dt; l.rotY += l.vrY * dt;
                 if (l.z > 0) {
                     l.vz -= GRAVITY * dt;
-                    if (l.vz > 0) { l.vx *= 0.99; l.vy *= 0.99; l.vrX *= 0.92; } // Rotation dampening on way up
+                    if (l.vz > 0) { l.vx *= 0.99; l.vy *= 0.99; l.vrX *= 0.96; } 
                     else { 
                         l.vx *= 0.92; l.vy *= 0.92;
                         l.vx += Math.sin(Date.now()*0.003 + l.waft) * (0.6 * l.chaos);
