--- a/interactive.html
+++ b/interactive.html
@@ -115,10 +115,10 @@ const assets = {
     treeFall: { src: 'assets/tree_fall.png', img: new Image() },
     complete_floor: { src: 'assets/complete_floor.png', img: new Image() },
     
-    car: { src: 'assets/car.png', img: new Image(), path: 'racing.html' },
+    car: { src: 'assets/car.png', img: new Image(), path: 'lhr.html' },
     gamma: { src: 'assets/gamma.png', img: new Image(), path: 'research.html' },
     racket: { src: 'assets/racket.png', img: new Image(), path: 'tennis.html' },
-    stock: { src: 'assets/stock.png', img: new Image(), path: 'finance.html' },
+    stock: { src: 'assets/stock.png', img: new Image(), path: 'stocks.html' },
 
     // Sky Layers
     sky1: { src: `assets/Clouds/Clouds ${SKY_ID}/1.png`, img: new Image(), speed: 0.0 },
